Correção de codigo que não colocava mascara no password

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 DATABASE_URL="mongodb+srv://christian-yugen:43fJhY2udaRyt85U@cluster0.fzsrd6q.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
-NEXTAUTH_SECRET="SECRET"
+NEXTAUTH_SECRET="NEXT-SECRET"
