Criando conexão com  icon Github app

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://christian-yugen:43fJhY2udaRyt85U@cluster0.fzsrd6q.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=593564df7e1f5d5a3113
+GITHUB_SECRET=777cc919ef5c181c64726e05ab355c6289a6d065
+
+GLOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
